--- a/page3.html
+++ b/page3.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="mbr-section content5 cid-rebszJFGtY" id="content5-36">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section content5 cid-rebszJFGtY" id="content5-36">
 
     
 
@@ -114,7 +114,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/0318.jpg" alt="Mobirise">
+                        <img src="assets/images/0320.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -139,7 +139,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/0119.jpg" alt="Mobirise">
+                        <img src="assets/images/0121.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
