--- a/page3.html
+++ b/page3.html
@@ -48,9 +48,9 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#header5-2s" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item dropdown">
-                    <a class="nav-link link text-info dropdown-toggle display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="false">Project</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown"><a class="text-info dropdown-item dropdown-toggle display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="false">Kubussen<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-info dropdown-item display-4" href="page1.html#header3-11">Kubus ~ Robin</a><a class="text-info dropdown-item display-4" href="page1.html#header3-12">Kubus ~ Tomaso<br></a><a class="text-info dropdown-item display-4" href="page1.html#header3-13">Kubus ~ Sandra</a></div></div></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Opnames</a><a class="text-info dropdown-item display-4" href="page14.html#content5-31" aria-expanded="false">Fotoshoot</a></div></li>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#header5-2s" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item dropdown open">
+                    <a class="nav-link link text-info dropdown-toggle display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="true">Project</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown open"><a class="text-info dropdown-item dropdown-toggle display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="true">Verhalen<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-info dropdown-item display-4" href="page1.html#header3-11">Robin</a><a class="text-info dropdown-item display-4" href="page1.html#header3-12">Tomaso<br></a><a class="text-info dropdown-item display-4" href="page1.html#header3-13">Sandra</a></div></div></div>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Opnames</a><a class="text-info dropdown-item display-4" href="page14.html#content5-31" aria-expanded="false">Fotoshoot</a></div></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-info display-4" href="page3.html#content5-36">
                         Over ons
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-rebszJFGtY" id="content5-36">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section content5 cid-rebszJFGtY" id="content5-36">
 
     
 
@@ -114,7 +114,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/0338.jpg" alt="Mobirise">
+                        <img src="assets/images/030.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
@@ -139,7 +139,7 @@
             <div class="card p-3 col-12 col-md-6 my-col">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/0139.jpg" alt="Mobirise">
+                        <img src="assets/images/011.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
