--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content5 cid-re7izkjIGS" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-re7izkjIGS" id="content5-1h">
 
     
 
@@ -135,7 +135,7 @@
                 
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/jumbotron2.jpg" alt="Mobirise">
+                        <img src="assets/images/close-up-tomaso-1166x777.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">
@@ -150,7 +150,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <img src="assets/images/background5.jpg" alt="Mobirise">
+                        <img src="assets/images/tomaso-close-up-1200x800.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5"><a href="page1.html#header3-13" class="text-secondary">
