--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#header5-2s" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item dropdown">
-                    <a class="nav-link link text-info dropdown-toggle display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="false">Project</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown"><a class="text-info dropdown-item dropdown-toggle display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="false">Verhalen<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-info dropdown-item display-4" href="page1.html#header3-11">Robin</a><a class="text-info dropdown-item display-4" href="page1.html#header3-12">Tomaso<br></a><a class="text-info dropdown-item display-4" href="page1.html#header3-13">Sandra</a></div></div></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Foto's</a></div></li>
+            <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#header5-2s" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item dropdown open">
+                    <a class="nav-link link text-info dropdown-toggle display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="true">Project</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown"><a class="text-info dropdown-item dropdown-toggle display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="false">Verhalen<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-info dropdown-item display-4" href="page1.html#header3-11">Robin</a><a class="text-info dropdown-item display-4" href="page1.html#header3-12">Tommaso<br></a><a class="text-info dropdown-item display-4" href="page1.html#header3-13">Sandra</a></div></div></div>
+                </li><li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Foto's</a></div></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-info display-4" href="page3.html#content5-36">
                         Over ons
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header5 cid-rebodE9X44" id="header5-2s">
+<section class="engine"><a href="https://mobirise.info/e">make your own website for free</a></section><section class="header5 cid-rebodE9X44" id="header5-2s">
 
     
 
@@ -72,7 +72,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1">Tabula Scripta</h1>
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style display-7"><br>Doorheen ons leven worden we gevormd door ervaringen en maatschappelijke invloeden van buitenaf. 
-<br>We starten ons leven vanuit een tabula rasa, een onbeschreven blad, dat door deze factoren beschreven wordt.<br>Wij bewerkten drie identieke blokken was, om zo op een abstracte manier een fragment uit de levensloop van Robin, Tomaso en Sandra weer te geven.<br><br></p>
+<br>We starten ons leven vanuit een tabula rasa, een onbeschreven blad, dat door deze factoren beschreven wordt.<br>Wij bewerkten drie identieke blokken was, om zo op een abstracte manier een fragment uit de levensloop van Robin, Tommaso en Sandra weer te geven.<br><br></p>
                 
             </div>
         </div>
