create github pages

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header5 cid-rebodE9X44" id="header5-2s">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="header5 cid-rebodE9X44" id="header5-2s">
 
     
 
