create github pages

--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-re7izkjIGS" id="content5-1h">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section content5 cid-re7izkjIGS" id="content5-1h">
 
     
 
@@ -315,7 +315,7 @@
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 55%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/Bo7mJYK5xMU?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/hKzDeln4p2Y?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
