--- a/page2.html
+++ b/page2.html
@@ -50,7 +50,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#header5-2s" aria-expanded="false"><span class="mbrib-home mbr-iconfont mbr-iconfont-btn"></span></a></li><li class="nav-item dropdown open">
-                    <a class="nav-link link text-info dropdown-toggle display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="true">Project</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown open"><a class="text-info dropdown-item dropdown-toggle display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="true">Verhalen<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-info dropdown-item display-4" href="page1.html#header5-4b">Robin</a><a class="text-info dropdown-item display-4" href="page1.html#header5-4c">Tommaso<br></a><a class="text-info dropdown-item display-4" href="page1.html#header5-4d">Sandra</a></div></div></div>
+                    <a class="nav-link link text-info dropdown-toggle display-4" href="#top" data-toggle="dropdown-submenu" aria-expanded="true">Project</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page1.html#content5-1h">Concept<br></a><div class="dropdown"><a class="text-info dropdown-item dropdown-toggle display-4" href="page1.html#features15-y" data-toggle="dropdown-submenu" aria-expanded="false">Verhalen<br></a><div class="dropdown-menu dropdown-submenu"><a class="text-info dropdown-item display-4" href="page1.html#header5-4b">Robin</a><a class="text-info dropdown-item display-4" href="page1.html#header5-4c">Tommaso<br></a><a class="text-info dropdown-item display-4" href="page1.html#header5-4d">Sandra</a></div></div><a class="text-info dropdown-item display-4" href="page15.html#features2-4u" aria-expanded="false">Enscenering<br></a></div>
                 </li><li class="nav-item dropdown"><a class="nav-link link text-info dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="false">Achter de schermen</a><div class="dropdown-menu"><a class="text-info dropdown-item display-4" href="page2.html#content5-2u">Vooronderzoek</a><a class="text-info dropdown-item display-4" href="page4.html#content5-1b">Wassen Kubus</a><a class="text-info dropdown-item display-4" href="page5.html#content5-2v" aria-expanded="false">Foto's</a></div></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link link text-info display-4" href="page3.html#content5-36">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-rebpiRM3Yc" id="content5-2u">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-rebpiRM3Yc" id="content5-2u">
 
     
 
@@ -179,11 +179,11 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/03.jpg" alt="Mobirise">
+                        <img src="assets/images/steen-schuin-676x901.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7">
-                            week 6 - uitwerking</h4>
+                        <h4 class="card-title mbr-fonts-style display-7"><a href="page14.html#content5-4i">
+                            week 6 en 7 - uitwerking</a></h4>
                         
                     </div>
                     <div class="mbr-section-btn text-center"><a href="page14.html#content5-4i" class="btn btn-primary display-4"><span class="mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>
