create github pages

--- a/page2.html
+++ b/page2.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="mbr-section content5 cid-rebpiRM3Yc" id="content5-2u">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-rebpiRM3Yc" id="content5-2u">
 
     
 
@@ -179,11 +179,11 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/steen-schuin-676x901.jpg" alt="Mobirise" title="">
+                        <img src="assets/images/week-6-en-7-478x375.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title mbr-fonts-style display-7"><a href="page14.html#content5-4i">
-                            week 6 en 7 - uitwerking</a></h4>
+                        <h4 class="card-title mbr-fonts-style display-7">
+                            week 6 en 7 - uitwerking</h4>
                         
                     </div>
                     <div class="mbr-section-btn text-center"><a href="page14.html#content5-4i" class="btn btn-primary display-4"><span class="mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>
