create github pages

--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-re7mUIdOva" id="content5-1k">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-re7mUIdOva" id="content5-1k">
 
     
 
@@ -88,7 +88,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 40%;">
-                <img src="assets/images/foto-vooronderzoek-778x1234.jpg" alt="Mobirise" title="">
+                <img src="assets/images/vooronderzoek-532x797.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -115,7 +115,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 60%;">
-                <img src="assets/images/inspiratie1-2-522x384.jpg" alt="Mobirise" title="">
+                <img src="assets/images/vooronderzoek-2-700x510.jpg" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
