create github pages

--- a/page10.html
+++ b/page10.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="mbr-section content5 cid-re8IqVaaWT" id="content5-1y">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content5 cid-re8IqVaaWT" id="content5-1y">
 
     
 
@@ -135,7 +135,7 @@
 
     <figure class="mbr-figure container">
             <div class="image-block" style="width: 41%;">
-                <img src="assets/images/5-blokken-460x307.jpg" width="1400" alt="Mobirise" title="">
+                <img src="assets/images/onbewerkte-kubussen-910x606.jpg" width="1400" alt="Mobirise" title="">
                 
             </div>
     </figure>
