create github pages

--- a/page11.html
+++ b/page11.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section content5 cid-re8PyiLZlm" id="content5-29">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section content5 cid-re8PyiLZlm" id="content5-29">
 
     
 
@@ -91,8 +91,8 @@
             <div class="mbr-white col-md-10">
                 
                 <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style display-7">Om ons concept van transformatie om te zetten in ons eigen ontwerp hebben we als test een kubus uit was gemaakt. Deze hebben we door toevoeging van warmte gesmolten en hier kleurstoffen aan toegevoegd.<br><br>Dit vormde een interessant proces van transformatie waarbij de ruwe korrels was overgingen naar een egale, doorzichtige vloeistof.  Deze vloeistof werd in de mal gegoten en weer zagen we een transformatieproces optreden: De vloeibare was koelde af en werd hierdoor steeds minder doorzichtig en lichter van kleur. 
-<br>Ook de textuur ging van een vloeistof naar een plastische massa om dan te eindigen als een  eerst een plastische massa en daarna een volledig uitgeharde kubus. 
-<br>Het eindresultaat van onze eerste test vormde een mooi, een kubus was in een bruinachtige tint. &nbsp;</p>
+<br>Ook de textuur ging van een vloeistof naar een plastische massa om dan over te gaan van een plastische massa naar een volledig uitgeharde kubus. 
+<br>Het eindresultaat van onze eerste test vormde een mooie kubus was in een bruinachtige tint. &nbsp;</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary-outline display-4" href="page4.html#content5-1b"><span class="mbri-arrow-next mbr-iconfont mbr-iconfont-btn"></span>productieproces kubus</a></div>
             </div>
         </div>
